timeline content added
Former-commit-id: d734d1ded7468aab7ec50c4fc6e5160fb4da83af [formerly adc29d484a2dc771437fa358b1b65e968ee0a745]
Former-commit-id: 6ee7edafa640edb86c6734e9cae57bbf07307d12

--- a/timeline.html
+++ b/timeline.html
@@ -217,8 +217,13 @@ This is a part of the site that is expanded and detailed as the project develops
     This is going to be the real transport hub for the Moon, together with Cernan's Promise, and later Lalande City. It develops into a colony in its own right. It is another carbonaceous asteroid, this time massing 25 metric kilotons. It is placed in a circular orbit 5000 km above the surface, so that it has the same orbital period as the polar tether and they will never be at risk of collision.
     </p>
     <p>
-    The asteroid is mined, and as material from it is sent to Cernan's Promise components for a space station are sent back up, plus gravel and rocks to maintain or increase its mass. 
+    The asteroid is mined, and as material from it is sent down to Cernan's Promise, components for a space station are sent back up, plus gravel and rocks to maintain or increase its mass. This space station will expand over time to fill certain economic niches:
     </p>
+    <ul>
+      <li>Microgravity manufacturing: with the Moon colonies there to send up raw materials and manufactured items, the asteroid is a good place for this. Perhaps if lunar material can be used to produce cheap enough heat shields, it would even be possible to send such goods to Earth's surface within a budget that made sense, by releasing them from the upper tether on a trajectory that will skim Earth's atmosphere. </li>
+      <li>Staging area for deep-space missions: As the manufacturing of space infrastructure grows as an industry at Cernan's Promise, it could prove valuable to assemble the final ship and payload for many deep-space missions there. Only the things that can't be produced on the Moon would need to come from Earth. Once ready, the ship can be given a significant speed boost by the upper launcher, allowing it to get quickly on its way.</li>
+      <li>Shipyard: Extending the previous idea, final assembly and outfitting of components from Cernan's Promise would be done at the asteroid. Complete ships combining those components with ones from Earth would be produced. Some would be nuclear ships. Some would be solar sail ships. Both kinds of ships would gain even more advantage than other designs through launch-release from the upper tether. Nuclear ships can avoid firing engines where the radiation spray could damage installations on the asteroid surface, solar sails save a ton of time by avoiding the need to break orbit themselves. </li>
+    </ul>
   </article>
   <article class="column">
     <h2>Colony Dev. con'd</h2>
