content for timeline and resources
Former-commit-id: b917563d00263e5421494d2529874412a60499da [formerly 5fbe6d6bc27146e4776039a47365ad05af9b8d74]
Former-commit-id: 49fd6946e3968b4046d39dfc771b282eadc43785

--- a/timeline.html
+++ b/timeline.html
@@ -131,7 +131,7 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>Once the hab has been pressurized and all the systems successfully tested, the first permanent crew arrives - 30 people. They all have an initial commitment of 2 years after which they may be rotated out for someone else, but the staff will remain 30 people and ramp up as further installations come online.</li>
    <li>This crew concentrates on the development of industrial and farming capacity. They are able to accomplish a great deal quickly, because the teleoperation of the robotic equipment continues to be done from Earth, which they augment now with onsite remote operation of such equipment. Being onsite to handle problems, modify and upgrade equipment, and invent new processes, they are able to make the robotic equipment extremely productive. The robots become able to execute complex processes almost independently, and begin to produce many of the components needed to make more robots.</li>
    <li>Once they complete the first greenhouse, stabilize ice harvesting at a suitable level,   complete the first solar thermal power plant, add a second, much larger hab, and meet a set of test goals demonstrating that it is safe to expand the population, the Residence Program begins</li>
-   <li>Due to the great significance of this hab being that it is the first permanent hab, it is simply being called First Hab.</li>
+   <li>Due to the great significance of the first permanent habitat on another celestial body, the first completed hab is simply called First Hab. The second hab, for the first round of the RP, needs a name, as does the polar colony, the polar tether, and a number of other major installations being planned. This task will require consultation.</li>
   </ul>
  </article>
  <article class="column">
@@ -217,6 +217,33 @@ This is a part of the site that is expanded and detailed as the project develops
     This is going to be the real transport hub for the Moon, together with Cernan's Promise, and later Lalande City. It develops into a colony in its own right. It is another carbonaceous asteroid, this time massing 25 metric kilotons. It is placed in a circular orbit 5000 km above the surface, so that it has the same orbital period as the polar tether and they will never be at risk of collision.
     </p>
     <p>
+    A moonward and spaceward tether just like the ones on the polar tether are built outwards from the asteroid. These will be reinforced to take bigger payloads over time, and even to run multiple cars up and down.
+    </p>
+  </article>
+  <article class="column">
+    <h2>Colony Dev. con'd</h2>
+    <h5>Expansion of the Peary colony, construction of Cernan's Promise</h5>
+    <p>
+    While the asteroid for the equatorial tether travels towards the Moon, the First Hab crew and the astronauts of the RP build more infrastructure at Peary. More robotic equipment arrives from Earth to assist, including prototype 3d printers, reactors for chemical processing, and more advanced robots and rovers.
+    </p>
+    <ul>
+      <li>Expand ice mining, separating out different ice chemicals</li>
+      <li>Investigate processing to produce quartz glass, and glass fibers suitable for use as reinforcement in a fused regolith matrix</li>
+      <li>Expand the greenhouses with the goal of producing most of the residents' food on-site. Begin raising edible insects as a source of quality protein and fat. If that goes well, most calories could come from local food, though it could take time to have yields sufficient for the local population.</li>
+      <li>Expand the solar thermal plant's capacity to serve all local power needs and provide a source of molten regolith for reactors and construction. It should be possible to produce a good fraction of this structure on-site.</li>
+      <li>Once the above infrastructure is done, and the main local buildings are roughed in and capable of holding an atmosphere, the heavy construction equipment is transported to Lalande and begins work on Cernan's Promise.</li>
+    </ul>
+    <p>
+    
+    </p>
+  </article>
+  <article class="column">
+    <h2>Socio-Economic Dev. cont'd</h2>
+  </article>
+</div>
+<div class="columnSet">
+  <article class="column">
+    <p>
     The asteroid is mined, and as material from it is sent down to Cernan's Promise, components for a space station are sent back up, plus gravel and rocks to maintain or increase its mass. This space station will expand over time to fill certain economic niches:
     </p>
     <ul>
@@ -226,9 +253,7 @@ This is a part of the site that is expanded and detailed as the project develops
     </ul>
   </article>
   <article class="column">
-    <h2>Colony Dev. con'd</h2>
   </article>
   <article class="column">
-    <h2>Socio-Economic Dev. cont'd</h2>
   </article>
 </div>
