--- a/timeline.html
+++ b/timeline.html
@@ -206,7 +206,7 @@ This is a part of the site that is expanded and detailed as the project develops
   <td colspan="4">The Earth orbit tether complex is operational. The requirement of sterility is waived for a portion of those chosen, and those colonists may be younger. Colonists who become pregnant must return to Earth for the pregnancy and the first years of the child's life. They may then return to the Moon. The child will be carefully monitored and the family will return to Earth if a threat to the child's health is detected. The existence of the Earth orbital tether lowers the cost of transport enough for this to be viable. Research into pregnancy and development of young in higher mammals will have been conducted by this time, informing safety and procedure on the matter. It is assumed that early pregnancy is not affected by lunar conditions, or that fertile colonists can take appropriate steps to ensure safety in an early phase of pregnancy before they return to Earth.</td>
   </tr>
  </table>
-<p>Price for a residential spot when the Moon opens to the public: $250,000. Population when the opening occurs: 25,400 souls.</p>
+<p>Price for a residential spot when the Moon opens to the public: $250,000. Population when the opening occurs: 25,500 souls.</p>
  </article>
 </div>
 <div class="columnSet">
@@ -222,27 +222,28 @@ This is a part of the site that is expanded and detailed as the project develops
   </article>
   <article class="column">
     <h2>Colony Dev. con'd</h2>
-    <h5>Expansion of the Peary colony, construction of Cernan's Promise</h5>
+    <h5>Expansion of Peary colony</h5>
     <p>
-    While the asteroid for the equatorial tether travels towards the Moon, the First Hab crew and the astronauts of the RP build more infrastructure at Peary. More robotic equipment arrives from Earth to assist, including prototype 3d printers, reactors for chemical processing, and more advanced robots and rovers.
+    The First Hab crew and the astronauts of the RP build more infrastructure at Peary. More robotic equipment arrives from Earth to assist, including prototype 3d printers, reactors for chemical processing, and more advanced robots and rovers.
     </p>
     <ul>
       <li>Expand ice mining, separating out different ice chemicals</li>
       <li>Investigate processing to produce quartz glass, and glass fibers suitable for use as reinforcement in a fused regolith matrix</li>
       <li>Expand the greenhouses with the goal of producing most of the residents' food on-site. Begin raising edible insects as a source of quality protein and fat. If that goes well, most calories could come from local food, though it could take time to have yields sufficient for the local population.</li>
       <li>Expand the solar thermal plant's capacity to serve all local power needs and provide a source of molten regolith for reactors and construction. It should be possible to produce a good fraction of this structure on-site.</li>
+      <li>Build a telescope in a small crater - a fixed one in which the whole crater is simply lined with a mirror.</li>
       <li>Once the above infrastructure is done, and the main local buildings are roughed in and capable of holding an atmosphere, the heavy construction equipment is transported to Lalande and begins work on Cernan's Promise.</li>
     </ul>
-    <p>
-    
-    </p>
   </article>
   <article class="column">
     <h2>Socio-Economic Dev. cont'd</h2>
+    <p>The 200 residents from RP round 1 work alongside the First Hab crew to achieve the listed goals. English is the working language. The First Hab crew are the senior staff, and lead RP crews on the various projects. Work largely continues to be done remotely from within the habs at interface stations. </p>
+    <p>Each married couple has a small apartment. Kitchens, bathrooms, showers, clothes washers, and everything else that involves plumbing, waste processing, or food is in centralized facilities shared by everyone. The second hab has a common exercise area, mult-use gathering area, and workshop for the use of residents on their own time. The greenhouses are also set up partially as relaxation and exercise areas. </p>
   </article>
 </div>
 <div class="columnSet">
   <article class="column">
+    <h5>The Equatorial Tether becomes Gagarin Station</h5>
     <p>
     The asteroid is mined, and as material from it is sent down to Cernan's Promise, components for a space station are sent back up, plus gravel and rocks to maintain or increase its mass. This space station will expand over time to fill certain economic niches:
     </p>
@@ -253,7 +254,47 @@ This is a part of the site that is expanded and detailed as the project develops
     </ul>
   </article>
   <article class="column">
+    <h5>Construction of Cernan's Promise</h5>
+    <p>As heavy industry will be concentrated at Cernan's Promise, once begun the priority is to get production going there as quickly as possible.</p>
+    <ul>
+      <li>The initial hab is first built, where the local administration will be lodged, similar to the role of First Hab. That construction includes paving the surrounding area (which means fusing the surface into stone), a provisional spaceport where the nuclear shuttle's engine is  connected up to serve as a generator during construction, a set of MIP stations, and an initial basalt fiber production facility specializing in cable. It is designed for a staff of 40 people. Once completed, that staff takes up residence and oversees further construction.</li>
+      <li>Roughly in order, the following infrastructure is built (here the roughness of the plan is more apparent than usual - this will be refined):
+      <ol>
+        <li>Solar thermal power plant (TESS phase 1), full-scale basalt fiber production unit, initial industrial hangar with first dust-roasters, vacuum deposition furnace, 3d printers, and cryogenic storage area </li>
+        <li>Big atrium, gallery (phase 1), beginning of glass production, first fluidized bed reactors</li>
+        <li>Large hangar with minimal atmosphere, 2nd standard hangar, TESS phase 2, first sports hab, extend upper gallery, south long atrium, proper spaceport</li>
+        <li>Complete upper gallery, 2nd TESS on hilltop, south hangar cluster, north long atrium </li>
+        <li>Teacup crater, lower gallery with sports habs and bottom dome</li>
+        <li>Mega-atrium</li>
+      </ol></li>
+    </ul>
+    <p>Even as all this is being built, production of other products is also occurring. Components for Gagarin Station are made and shipped out. Efforts are made to build more robots using local resources as much as possible. A few satellites are made and placed in orbit. A hull, frame, trusses, bulk regolith shielding, and a large tank of water, are sent to LEO for a space station.</p>
+    <h5>Expansion of Peary Colony</h5>
+    <p>As the population grows, more greenhouses are needed. Ice mining also expands, now being done in a whole set of craters. The ice mining is now almost completely automated. The population at Peary levels off at 1000 people, and everyone else goes to Lalande. </p>
   </article>
+  <article class="column">
+    <h5>Residence Program rounds 2 through 5</h5>
+    <p>Total population at the completion of these events is 6300 people - 6200 from the RP, and 100 from the space-faring nations who continue to administer the colonies. The Moon Agency is created at this point, and staff is extended beyond the existing management staff from the space agencies to include some of the residents. The MA oversees colony activity beyond that point, following the dictates of a treaty created to establish its policies.</p>
+    <p>Some programming broadcast from the colonies becomes quite popular on Earth. Certain sports have evolved into something unique and entertaining, and there are now leagues of small competing teams, and scheduled matches for several sports that include annual championships. A sort of variety talk show has also become very popular. An annual arts event gets considerable attention and includes virtual participation by people on Earth. Many of the video blogs of different resident groups have large loyal followings. The lunar population includes a number of people who have become international celebrities, and even more who are major celebrities in their home countries.</p>
+    <h5>The Moon Fund and Opening of the Economy</h5>
+    <p>The lunar economy nears break even during these events. The Moon Fund is created and all lunar finances from existing industry then go through it. How profits from that are distributed, once they exist, becomes a very delicate matter that has to be carefully negotiated. Most industries are privatized in stages. Transport infrastructure continues to be held in common and governed by the Moon Agency.</p>
+    <p>The residents' needs have been and continue to be covered by the colony administration. All colony resources are essentially held in common, as far as providing for the people there goes. As time goes on, there are increasing numbers of deals between residents for goods and services that are extras. There is barter, and sometimes exchanges of funds between Earth-side accounts, which is then used to have extra luxury items delivered. (Residents already had a standard allotment of mass and money for getting non-essentials from Earth. Common examples included favorite foods, extra clothing, and small furnishings.) Towards the end of this period, the freedom of residents to have contracts with entities on Earth and be paid increases, and the wealth of some residents suddenly increases as a result.</p>
+  </article>
+</div>
+<div class="columnSet">
+  <article class="column">
+    <h5>Addition of 3 More Polar Tethers</h5>
+    <p>The original asteroid retrieval ship, now heavily upgraded, delivers asteroids for the remaining tethers for the Moon. They are placed in staggered polar orbits, one every 90&deg;, and all the tethers have the same orbital period so they will never interfere with each other. All three mass 25 kilotons, like the Gagarin asteroid. One is again carbonaceous, the other two are mostly metal. Mining installations are created on all three, but there is little call for human habitation on them and they have only basic facilities for a small, occasional crew. The mining and transport work is overseen remotely and is largely automatic.</p>
+    <p>With this system complete, the maximum wait between convenient trajectories to or from a tether is 3.5 days anywhere on the Moon. With a reasonable fuel penalty, most places are accessible much more regularly. In a pinch a rescue crew can get anywhere in a few hours using the shuttles alone. So, now ice mining starts at the south pole as well, and many other places on the Moon are explored more extensively. In a few places, valuable ores, or very large lava tubes, or some especially exciting discovery is found, and expeditions begin development or exploration there.</p>
+    <h5>Coil Gun Use Begins</h5>
+    <p>Cernan's Promise starts using coil guns to launch cargo to the foot of Gagarin's tether, or straight into orbit or on a trajectory for LEO. These launches are in capsules that have thrusters sufficient for course corrections or orbital maneuvers, and most are reusable. Some can also be decelerated by a catcher with a similar structure on return, that system is made after the initial coil gun.</p>
+    <p>Lalande B, at 8 km across and about 30 km north of Lalande, is used for this purpose. All spaceport activity is transferred there over time to provide a buffer zone between it and Lalande City. It also has  an even shape and smooth walls so the coil guns over time can be made longer, and to swivel on a track around the crater rim in order to launch or catch in any direction.</p>
+    <h5>Asteroid for the Earth Orbital Tether Arrives</h5>
+    <p>Another jump up, this asteroid is 1 metric megaton of material, largely metallic. Enough confidence in asteroid maneuvering and tether technology has built up to place it in orbit and begin the tether.</p>
+  </article>
+  <article class="column">
+  </article>
+    <p></p>
   <article class="column">
   </article>
 </div>
