--- a/timeline.html
+++ b/timeline.html
@@ -289,10 +289,13 @@ This is a part of the site that is expanded and detailed as the project develops
     <h5>Coil Gun Use Begins</h5>
     <p>Cernan's Promise starts using coil guns to launch cargo to the foot of Gagarin's tether, or straight into orbit or on a trajectory for LEO. These launches are in capsules that have thrusters sufficient for course corrections or orbital maneuvers, and most are reusable. Some can also be decelerated by a catcher with a similar structure on return, that system is made after the initial coil gun.</p>
     <p>Lalande B, at 8 km across and about 30 km north of Lalande, is used for this purpose. All spaceport activity is transferred there over time to provide a buffer zone between it and Lalande City. It also has  an even shape and smooth walls so the coil guns over time can be made longer, and to swivel on a track around the crater rim in order to launch or catch in any direction.</p>
-    <h5>Asteroid for the Earth Orbital Tether Arrives</h5>
-    <p>Another jump up, this asteroid is 1 metric megaton of material, largely metallic. Enough confidence in asteroid maneuvering and tether technology has built up to place it in orbit and begin the tether.</p>
+    <h5>Earth Orbital Tether Work Begins</h5>
+    <p>Another jump up in mass moved, the asteroid delivered to be the anchor mass is 1 metric megaton of material, largely metallic. Enough confidence in asteroid maneuvering and tether technology has built up to place it in orbit and begin the tether. Initially its orbit is circularized at 5000 km altitude, and the tether is built earthwards to an altitude of 250 km. </p>
+    <p>In order for this to work, a program to shift satellites to orbits that don't interfere with the tether is undertaken, starting a number of years before the anchor asteroid arrives. Many are shifted to below 250 km, and the incentive is that the tether complex will service and refuel these satellites for an excellent price. Other favored orbits are ones at the final orbital altitude of the anchor at 10 000 km, either moving with it or in a clear harmonic, or ones beyond its tip, which will be at 15 000 km. Satellites that really can't be adapted to any of these options are maintained by the achor station's servicing fleet anyways, which helps maintain its orbit clear of obstructions. But of course the tether must be constantly maintained, be designed to withstand large impacts, and be able to defend itself if a collision is anticipated.</p>
+    <p>At this altitude, the velocity needed to meet the foot is decreased to 5.5 km/s.</p>
   </article>
   <article class="column">
+    
   </article>
     <p></p>
   <article class="column">
