--- a/timeline.html
+++ b/timeline.html
@@ -112,9 +112,9 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>An asteroid massing 7500 tons is brought into high polar orbit, 5000 km above the surface. Surveys of Near Earth Asteroids will be much more complete by then, so it is reasonable to expect a carbonaceous asteroid that is suitable will have been found and collected. Its content of carbon and metal would be its most valuable contribution, as water is being mined from the lunar pole at less expense. But its hydrated minerals are still of value.</li>
    <li>Zylon cables, construction equipment, and a test cable car are brought from Earth to the asteroid. Some small scale tests will already have been done in preparation. Now further testing and experimentation is done to ensure a robust design.</li>
    <li>A tether begins to be extended from the asteroid towards the surface. The first increment is only a few kilometers, then increments of a hundred kilometers are added. The platform at the foot, the procedure by which the nuclear shuttle meets it and is grappled, oscillation control on the tether, the cable car, and cable car propulsion are all thoroughly tested at this scale and further refined.</li>
-   <li>The tether is extended in increments of 1000 km until it reaches an altitude of 100 km above the surface. The lower tether is then complete.</li>
+   <li>The tether is extended in increments of 1000 km until it reaches an altitude of 50 km above the surface. The lower tether is then complete.</li>
    <li>The cable car may receive power beamed from the asteroid's solar panels, or may have an onboard nuclear generator.</li>
-   <li>Once at its full length, the nuclear shuttle will only need to use 1/5th of the delta V needed to reach and return from lunar orbit to reach the platform of the tether foot and return. It will need that same 1/5th of the normal delta V to go anywhere on the Moon by grappling the platform and hanging off it until it is over its destination, and to return to base the same way.</li>
+   <li>Once at its full length, the nuclear shuttle will only need to use 1/4th of the delta V needed to reach and return from lunar orbit to reach the platform of the tether foot and return. It will need that same 1/4th of the normal delta V to go anywhere on the Moon by grappling the platform and hanging off it until it is over its destination, and to return to base the same way.</li>
    <li>Conversion of the asteroid to a space station begins. Early steps in that direction were carried out during tether construction, replacing payloads of asteroid material with simple vessels and beams made of fused regolith. The solar panels and engines of the retrieval ship are installed on the asteroid for use in orbital maintenance.</li>
    <li>The upper tether, extending outwards deeper into space, is also installed and given its own cable car and platform at the tip. This will proceed much faster as the dynamics of the system and good designs are now known.</li>
    <li>With this process completed, it takes about 2 km/s less delta V to get something to the Moon from Earth, and 3 km/s less to get something back.</li>
@@ -122,6 +122,9 @@ This is a part of the site that is expanded and detailed as the project develops
   </ul>
 <p>A second asteroid retrieval mission is sent out from Earth to get the anchor mass for the equatorial tether complex. Target mass: 25 kilotons.</p>
 <p>Cargo runs between LEO and the polar tether occur at every opportunity, every 2 weeks, 26 per year.</p>
+<h5>Crew Transfer Vehicle</h5>
+<p>A sort of mother ship shuttles crew between the LEO space station and the polar tether anchor, where they transfer to the cable car, go to the foot platform, and are picked up by the nuclear shuttle. On the very first such run, they instead transfer to a new nuclear shuttle designed for passenger duties, and descend to the surface using that. After that the passenger shuttle is piloted to the tether foot when people need picking up.</p>
+<p>This ship has hydrolox engines and carries up to 30 people. It receives servicing at the LEO station, and fueling at the polar tether.</p>
  </article>
  <article class="column">
   <h5><a href="colonies.html#PearyModels">Completion of the Peary First Hab</a></h5>
@@ -203,7 +206,7 @@ This is a part of the site that is expanded and detailed as the project develops
   <td>7</td><td>12800</td><td>$5 million US</td><td>$64 billion US</td>
   </tr>
   <tr>
-  <td colspan="4">The Earth orbit tether complex is operational. The requirement of sterility is waived for a portion of those chosen, and those colonists may be younger. Colonists who become pregnant must return to Earth for the pregnancy and the first years of the child's life. They may then return to the Moon. The child will be carefully monitored and the family will return to Earth if a threat to the child's health is detected. The existence of the Earth orbital tether lowers the cost of transport enough for this to be viable. Research into pregnancy and development of young in higher mammals will have been conducted by this time, informing safety and procedure on the matter. It is assumed that early pregnancy is not affected by lunar conditions, or that fertile colonists can take appropriate steps to ensure safety in an early phase of pregnancy before they return to Earth.</td>
+  <td colspan="4">The Earth orbit tether complex is complete. The requirement of sterility is waived for a portion of those chosen, and those colonists may be younger. Colonists who become pregnant must return to Earth for the pregnancy and the first years of the child's life. They may then return to the Moon. The child will be carefully monitored and the family will return to Earth if a threat to the child's health is detected. The existence of the Earth orbital tether lowers the cost of transport enough for this to be viable. Research into pregnancy and development of young in higher mammals will have been conducted by this time, informing safety and procedure on the matter. It is assumed that early pregnancy is not affected by lunar conditions, or that fertile colonists can take appropriate steps to ensure safety in an early phase of pregnancy before they return to Earth.</td>
   </tr>
  </table>
 <p>Price for a residential spot when the Moon opens to the public: $250,000. Population when the opening occurs: 25,500 souls.</p>
@@ -295,7 +298,7 @@ This is a part of the site that is expanded and detailed as the project develops
     <p>At this altitude, the velocity needed to meet the foot is decreased to 5.5 km/s.</p>
   </article>
   <article class="column">
-    
+
   </article>
     <p></p>
   <article class="column">
