transport content refinements, timeline content added
Former-commit-id: 8362a8b0fd463306c503652a74b6af03abb3c430

--- a/wackyTech.html
+++ b/wackyTech.html
@@ -35,6 +35,10 @@ MathJax.Hub.Config({
 				<li>C3=0 manifolds | pure two-body zero energy transfers | <span style="color:red">Magic</span></li>
 				<li><a href="#mercuryIsGoodForYou">Mercury is good for you</a>| Density impulse | <span style="color:orange">raw idea</span></li>
 			</ul>
+      <p>Technologies Kim thinks about</p>
+      <ul>
+        <li>How the nuclear shuttles could be hooked up to a power grid, especially during initial construction of Cernan's Promise. Should the generators be separate and be hooked up to the reactor while the shuttle is parked?</li>
+</ul>
 		</div>
 		</div>
 	</section>
